--- a/src/styles/utils/variables/global.scss
+++ b/src/styles/utils/variables/global.scss
@@ -4,6 +4,9 @@ $page-frame: 144rem; // Standard desktop
 $padding-page-frame: 1.6rem;
 $base-border-radius: 0.3rem;
 $content-container-width: 80rem;
+$toolbar-height: 5rem;
+
+$border-link-thickness: 0.3rem;
 
 // Breakpoints
 $breakpoint-tablet-portrait: 768;
@@ -11,6 +14,8 @@ $breakpoint-tablet-landscape: 1024;
 
 // z-indexes
 $z-index-base: 1;
+$z-index-close-button: 2;
+$z-index-toolbar: 3;
 
 // Spacings
 $one-third: 33.3333%;
