--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,3 +1,45 @@
-.title {
-  font-weight: bold;
+@use '../styles/utils/index' as utils;
+
+.home-page {
+  display: flex;
+  justify-content: space-between;
+
+  &__title {
+    font-family: utils.$font-secondary;
+    font-size: utils.$font-size-presentation;
+    font-weight: bold;
+    max-width: 60rem;
+    margin-top: 20rem;
+  }
+
+  &__sub-title {
+    display: block;
+    font-size: utils.$font-size-xl;
+    max-width: 55rem;
+    line-height: utils.$line-height-l;
+  }
+
+  &__column {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__image {
+    border-radius: 3rem;
+    height: 42rem;
+    object-fit: cover;
+    width: 66rem;
+
+    &:first-child {
+      margin-top: 15rem;
+      object-position: 0 -52rem;
+    }
+
+    &:last-child {
+      left: -10rem;
+      object-position: 0 -20rem;
+      position: relative;
+      top: -10rem;
+    }
+  }
 }
