--- a/src/styles/utils/variables/typography.scss
+++ b/src/styles/utils/variables/typography.scss
@@ -11,12 +11,14 @@ $font-size-lg-xl: 2.2rem;
 $font-size-xl: 2.4rem;
 $font-size-xxl: 2.8rem;
 $font-size-xxxl: 3.2rem;
+$font-size-presentation: 6.2rem;
 
 // Text colors
 $color-text-default: colors.$color-black;
 
 // Font family
 $font-primary: roboto, sans-serif;
+$font-secondary: serif, sans-serif;
 
 // Letter spacing
 $letter-spacing-md: 0.01rem;
@@ -28,3 +30,5 @@ $font-weight-bold: 700;
 
 // Line heights
 $base-line-height: 1;
+$line-height-m: 1.25;
+$line-height-l: 1.75;
