--- a/src/app/containers/homepage-actions/homepage-actions.module.scss
+++ b/src/app/containers/homepage-actions/homepage-actions.module.scss
@@ -1,1 +1,10 @@
-// Placeholder
+.homepage-actions {
+  align-items: flex-end;
+  display: flex;
+
+  &__action {
+    &:not(:last-child) {
+      margin-right: 8.5rem;
+    }
+  }
+}
