--- a/src/styles/utils/variables/colors.scss
+++ b/src/styles/utils/variables/colors.scss
@@ -7,15 +7,18 @@ $color-grey-850: #d9d9d9;
 $color-grey-550: #8c8c8c;
 $color-grey-100: #19191a;
 
+$color-blue-530: #4472ca;
 $color-blue-350: #3a7378;
 
 $color-yellow-500: #ffd700;
+
+$color-orange-500: #f90;
 
 // Specific colors
 $color-background: $color-grey-950;
 
 $color-primary: $color-grey-100;
-$color-secondary: $color-blue-350;
+$color-secondary: $color-orange-500;
 
 $color-focus: $color-yellow-500;
 
