--- a/src/styles/utils/variables/global.scss
+++ b/src/styles/utils/variables/global.scss
@@ -11,6 +11,7 @@ $border-link-thickness: 0.3rem;
 // Breakpoints
 $breakpoint-tablet-portrait: 768;
 $breakpoint-tablet-landscape: 1024;
+$breakpoint-desktop: 1440;
 
 // z-indexes
 $z-index-base: 1;
