--- a/src/styles/utils/variables/global.scss
+++ b/src/styles/utils/variables/global.scss
@@ -9,6 +9,7 @@ $toolbar-height: 5rem;
 $border-link-thickness: 0.3rem;
 
 // Breakpoints
+$breakpoint-mobile-portrait: 428;
 $breakpoint-tablet-portrait: 768;
 $breakpoint-tablet-landscape: 1024;
 $breakpoint-desktop: 1440;
