--- a/src/app/beers/page.module.scss
+++ b/src/app/beers/page.module.scss
@@ -5,20 +5,21 @@
   &__title {
     font-family: utils.$font-secondary;
     font-size: utils.$font-size-xxxl;
+    margin-bottom: 8rem;
   }
 
   &__cards {
+    column-gap: 2rem;
     display: grid;
-    grid-template-rows: repeat(3, 25rem);
-    grid-template-columns: repeat(3, 34%);
+    grid-template-columns: repeat(3, 1fr);
     row-gap: 2rem;
 
     @include utils.respond-to(utils.$breakpoint-desktop, max) {
-      grid-template-columns: repeat(2, 50%);
+      grid-template-columns: repeat(2, 1fr);
     }
 
-    @include utils.respond-to(utils.$breakpoint-tablet-landscape, max) {
-      grid-template-columns: repeat(1, 100%);
+    @include utils.respond-to(utils.$breakpoint-tablet-portrait, max) {
+      grid-template-columns: repeat(1, 1fr);
     }
   }
 }
