--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -12,6 +12,14 @@
     margin-bottom: 3.5rem;
     margin-top: 20rem;
     max-width: 60rem;
+
+    @include utils.respond-to(
+      utils.$breakpoint-desktop-vertical,
+            max,
+            height
+        ) {
+      margin-top: 10rem;
+    }
   }
 
   &__sub-title {
@@ -27,6 +35,8 @@
   }
 
   &__image {
+    $_this: &;
+
     border-radius: 3rem;
     height: 42rem;
     object-fit: cover;
@@ -43,6 +53,16 @@
       position: relative;
       top: -10rem;
     }
+
+    @include utils.respond-to(
+      utils.$breakpoint-desktop-vertical,
+            max,
+            height
+        ) {
+      &#{$_this}:first-child {
+        margin-top: 5rem;
+      }
+    }
   }
 
   &__actions {
@@ -56,7 +76,15 @@
     object-position: 0 2rem;
     opacity: 0.02;
     position: absolute;
-    top: 66rem;
+    top: 74rem;
     width: 109rem;
+
+    @include utils.respond-to(
+      utils.$breakpoint-desktop-vertical,
+            max,
+            height
+        ) {
+      top: 54rem;
+    }
   }
 }
