--- a/src/styles/utils/variables/global.scss
+++ b/src/styles/utils/variables/global.scss
@@ -14,6 +14,8 @@ $breakpoint-tablet-portrait: 768;
 $breakpoint-tablet-landscape: 1024;
 $breakpoint-desktop: 1440;
 
+$breakpoint-desktop-vertical: 920;
+
 // z-indexes
 $z-index-base: 1;
 $z-index-close-button: 2;
