--- a/src/app/beers/containers/beers-selection-container/beers-selection-container.module.scss
+++ b/src/app/beers/containers/beers-selection-container/beers-selection-container.module.scss
@@ -1,6 +1,7 @@
 @use '../../../../styles/utils/index' as utils;
 
 .sorting-container {
+  align-items: flex-end;
   display: flex;
   padding: 1.6rem 0;
 
@@ -12,9 +13,11 @@
 }
 
 .page-cards {
+  border-top: utils.$base-border-height solid utils.$color-grey-550;
   column-gap: 2rem;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
+  padding-top: 1.6rem;
   row-gap: 2rem;
 
   @include utils.respond-to(utils.$breakpoint-desktop, max) {
