--- a/src/app/components/base-button/base-button.module.scss
+++ b/src/app/components/base-button/base-button.module.scss
@@ -7,6 +7,11 @@
     font-size: utils.$font-size-s;
   }
 
+  &--medium-large {
+    font-size: 1.6rem;
+    padding: 1.2rem;
+  }
+
   &--large {
     border-radius: 0.9rem;
     font-size: utils.$font-size-lg-xl;
