--- a/src/app/components/navbar/navbar.module.scss
+++ b/src/app/components/navbar/navbar.module.scss
@@ -4,14 +4,14 @@
   $_this: &;
   $_mobile-nav-icon-width: 2.7rem;
 
-  display: flex;
+  @include utils.flex-display(row);
+
   height: utils.$toolbar-height;
   justify-content: space-between;
   margin: 0 auto;
   max-width: utils.$page-frame;
   padding: 0 utils.$padding-page-frame;
   position: relative;
-  width: 100%;
 
   &__row {
     display: flex;
@@ -66,14 +66,13 @@
 
   &__list {
     @include utils.reset-list-style;
+    @include utils.flex-display(row);
 
-    display: flex;
     justify-content: center;
     position: relative;
 
     @include utils.respond-to(utils.$breakpoint-tablet-portrait, max) {
       flex-direction: column;
-      width: 100%;
     }
 
     &--large {
@@ -94,10 +93,11 @@
   }
 
   &__link {
+    @include utils.flex-display(row);
+
     align-items: center;
     border-bottom: utils.$border-link-thickness solid transparent;
     color: utils.$color-white;
-    display: flex;
     letter-spacing: utils.$letter-spacing-md;
     text-decoration: none;
 
@@ -132,9 +132,9 @@
   }
 
   &__app-logo {
-    align-items: center;
-    align-self: center;
-    display: flex;
+    @include utils.flex-display(row, true);
+
+    justify-content: flex-start;
     height: 5rem;
   }
 
