Update navbar buttons.

--- a/src/app/components/base-button/base-button.module.scss
+++ b/src/app/components/base-button/base-button.module.scss
@@ -45,4 +45,15 @@
     text-align: center;
     width: 100%;
   }
+
+  &--as-icon {
+    background: utils.$none;
+    padding: 0;
+
+    &:active,
+    &:hover {
+      background: utils.$none;
+      color: utils.$color-focus;
+    }
+  }
 }
