Update accordion component.

--- a/src/styles/utils/variables/global.scss
+++ b/src/styles/utils/variables/global.scss
@@ -22,6 +22,7 @@ $input-size: 4.4rem;
 
 // Animations
 $base-animation-duration: 0.15s;
+$animation-duration-med: 0.3s;
 
 // z-indexes
 $z-index-base: 1;
