--- a/src/app/components/base-accordion/base-accordion.module.scss
+++ b/src/app/components/base-accordion/base-accordion.module.scss
@@ -33,12 +33,21 @@
     @include utils.flex-display(row);
 
     justify-content: space-between;
-    width: 100%;
 
     &:active,
     &:hover {
       color: utils.$color-orange-500;
     }
+  }
+
+  // To override the default styles on the base-button
+  #{$_this}__heading-row {
+    &:active,
+    &:hover {
+      color: utils.$color-secondary;
+    }
+
+    width: 100%;
   }
 
   &__title {
@@ -64,6 +73,10 @@
   }
 
   &__content {
-    padding: 1.6rem 0;
+    $_this: &;
+
+    display: block;
+    overflow: hidden;
+    transition: max-height utils.$animation-duration-med ease-out;
   }
 }
